Fixes: #354 Post new topic alignment bug (if more bbcode links are added)
git-svn-id: http://punbb.informer.com/svn/punbb/trunk@1705 4dc816b1-62af-4023-b237-cae3452c1eb1

--- a/style/Oxygen/Oxygen.css
+++ b/style/Oxygen/Oxygen.css
@@ -1376,10 +1376,6 @@ F - MAIN CONTENT - FORMS
 	position: relative;
 	}
 
-.brd .txt-set .required label span em {
-	margin-bottom: -1.2em;
-	}
-
 .brd .req-error {
 	display: block;
 	}
